--- a/index.html
+++ b/index.html
@@ -190,11 +190,86 @@
               </div>
             </div>
           </div>
-    </section>gi
-    
+    </section>
+
 
     <!-- QUESTIONS -->
-    <section class="questions"></section>
+    <section class="questions py-5">
+        <div class="container py-lg-5">
+            <div class="header-section text-center mx-auto">
+              <h6 class="sub-title">Questions and Answers</h6>
+              <h3>General FAQs </h3>
+              <p class="my-3"> Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+                Nulla mollis dapibus nunc, ut rhoncus
+                turpis sodales quis. Integer sit amet mattis quam.</p>
+            </div>
+            <div class="row">
+              <div class="col-md-5 mt-5">
+                <div class="faq-image">
+                  <img src="./img/women.jpg" class="img-fluid shadow img-curve" alt="">
+                </div>
+              </div>
+              <div class="col-md-7 mt-5 pl-lg-5">
+                <section class="menu-faq" id="faq">
+                  <div class="faq-page">
+                    <ul>
+                      <li>
+                        <input type="checkbox" checked>
+                        <i></i>
+                        <h2>There are many passages but the majority?</h2>
+                        <p>Voluptates amet earum velit nobis aliquam
+                          laboriosam nihil debitis facere voluptatibus consectetur quae quasi fuga, ad corrupti libero omnis sapiente
+                          non assumenda, incidunt officiis eaque iste minima autem.</p>
+                      </li>
+                      <li>
+                        <input type="checkbox" checked>
+                        <i></i>
+                        <h2>Sed ut perspiciatis unde omnis?</h2>
+                        <p>Sit amet consectetur adipisicing elit. Voluptates amet earum velit nobis aliquam
+                          laboriosam nihil debitis animi vitae eos nisi laudantium. Tempore reiciendis ipsam culpa, qui
+                          voluptates eveniet, incidunt officiis eaque iste minima autem.</p>
+                      </li>
+                      <li>
+                        <input type="checkbox" checked>
+                        <i></i>
+                        <h2>At vero eos iusto odio ducimus qui?</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates amet earum velit nobis aliquam
+                          laboriosam nihil quasi fuga, ad corrupti libero omnis sapiente
+                          non assumenda excepturi aperiam animi vitae eos nisi laudantium. Tempore reiciendis ipsam culpa, qui
+                          voluptates eveniet, incidunt officiis eaque iste minima autem.</p>
+                      </li>
+                      <li>
+                        <input type="checkbox" checked>
+                        <i></i>
+                        <h2>We denounce with righteous?</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates amet earum velit nobis aliquam
+                          laboriosam nihil debitis facere voluptatibus consectetur quae quasi fuga, ad corrupti libero omnis sapiente
+                          non assumenda excepturi aperiam iste minima autem.</p>
+                      </li>
+                      <li>
+                        <input type="checkbox" checked>
+                        <i></i>
+                        <h2>perspiciatis unde omnis?</h2>
+                        <p>Sit amet consectetur adipisicing elit. Voluptates amet earum velit nobis aliquam
+                          laboriosam nihil debitis animi vitae eos nisi laudantium. Tempore reiciendis ipsam culpa, qui
+                          voluptates eveniet, incidunt officiis eaque iste minima autem.</p>
+                      </li>
+                      <li>
+                        <input type="checkbox" checked>
+                        <i></i>
+                        <h2>At vero eos iusto odio ducimus qui?</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates amet earum velit nobis aliquam
+                          laboriosam nihil quasi fuga, ad corrupti libero omnis sapiente
+                          non assumenda excepturi aperiam animi vitae eos nisi laudantium. Tempore reiciendis ipsam culpa, qui
+                          voluptates eveniet, incidunt officiis eaque iste minima autem.</p>
+                      </li>
+                    </ul>
+                  </div>
+                </section>
+              </div>
+            </div>
+          </div>
+    </section>
 
     <!-- FEATURE -->
     <section class="feature py-5 mb-4">
